ENH: additional #word and #message dictionary directives (#2276)
- use `#word` to concatenate, expand content with the resulting string
  being treated as a word token. Can be used in dictionary or
  primitive context.

  In dictionary context, it fills the gap for constructing dictionary
  names on-the-fly. For example,

  ```
  #word "some_prefix_solverInfo_${application}"
  {
      type    solverInfo;
      libs    (utilityFunctionObjects);
      ...
  }
  ```

  The '#word' directive will automatically squeeze out non-word
  characters. In the block content form, it will also strip out
  comments. This means that this type of content should also work:

  ```
  #word {
     some_prefix_solverInfo
     /* Appended with application name (if defined) */
     ${application:+_}  // Use '_' separator
     ${application}     // The application
  }
  {
      type    solverInfo;
      libs    (utilityFunctionObjects);
      ...
  }
  ```
  This is admittedly quite ugly, but illustrates its capabilities.

- use `#message` to report expanded string content to stderr.
  For example,

  ```
  T
  {
     solver          PBiCG;
     preconditioner  DILU;
     tolerance       1e-10;
     relTol          0;
     #message "using solver: $solver"
  }
  ```
  Only reports on the master node.

--- a/src/OpenFOAM/db/dictionary/functionEntries/README
+++ b/src/OpenFOAM/db/dictionary/functionEntries/README
@@ -6,15 +6,17 @@
   #overwrite        | dict              | entry introducer
   #warn             | dict              | entry introducer
   #error            | dict              | entry introducer
-                    |                   |
   #remove           | dict              | keyType or List<keyType>
                     |                   |
   #include          | dict/primitive    | string
   #sinclude         | dict/primitive    | string
-  #includeIfPresent | dict/primitive    | string
   #includeEtc       | dict/primitive    | string
   #sincludeEtc      | dict/primitive    | string
   #includeFunc      | dict              | word
+                    |                   |
+  #message          | dict/primitive    | string or braced content
+  #word             | dict/primitive    | string or braced content
+  #eval             | primitive         | string or braced content
                     |                   |
   #calc             | dict/primitive    | string
   #codeStream       | dict/primitive    | dictionary
@@ -22,7 +24,14 @@
   #ifeq             | dict              | entry entry
 
 
-Pending future extensions
+Deprecated
+
+| directive         | comments                              |
+|-------------------|---------------------------------------|
+  #includeIfPresent | same as #sinclude                     |
+
+
+Pending future extensions (considered reserved)
 
 | directive         | context           | content           | line oriented?
 |-------------------|-------------------|-------------------|-----------------
@@ -31,4 +40,4 @@ Pending future extensions
   #undef            | dict              | keyType or List<keyType>
 
 
-2019-08-21
+2021-11-24
